# BACpypes3

./: .gitignore  justfile  mypy-baseline.txt  pyproject.toml
bacpypes3/: __main__.py  appservice.py  argparse.py  cmd.py  comm.py  console.py  constructeddata.py  debugging.py  errors.py  npdu.py  object.py  pdu.py  vendor.py
bacpypes3/ipv6/: bvll.py  service.py
bacpypes3/lib/: batchread.py
bacpypes3/local/: cov.py  event.py  fault.py  object.py
bacpypes3/rdf/: __main__.py
bacpypes3/sc/: bvll.py  service.py
bacpypes3/service/: cov.py
bacpypes3/vlan/: __init__.py
doc/source/: conf.py
samples/: console-ase-sap.py  device-object-init-1.py  device-object-init-2.py  find-device-by-address.py  find-device-by-instance.py  mini-device-revisited.py  network-port-1.py  rpc-server.py
sandbox/: get-ip-address.py  get-netmask.py  initialize-routing-table.py
tests/: state_machine.py  test_1.py  test__template.py  trapped_classes.py
tests/test_app/: test_read_write_api.py
tests/test_basetypes/: __init__.py  test_datetime.py
tests/test_utilities/: test_state_machine.py
tests/test_vlan/: test_ipv4_network.py  test_ipv4_router.py  test_network.py
