[project]
authors = [
    { name = "Joel Bender", email = "joel@carrickbender.com" },
    { name = "Noah May", email = "noahmouse2011@gmail.com" },
]
name = "BACPypes3"
version = "0.0.102"
description = "BACnet Communications Library"
readme = "README.md"
requires-python = ">=3.8"
license = "LGPL-v3.0"
dependencies = []
urls = { source = "https://github.com/nmay231/bacpypes3" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "ifaddr>=0.2.0",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.2",
    "rdflib>=6.3.2",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
    "twine>=6.1.0",
    "websockets>=13.1",
]

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
